workdir/Stage-6/Lex_Yacc/parser.output
Terminals unused in grammar

    NOT


State 0 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: TypeDefBlockAndGDeclBlock FDefBlock MainBlock
    2        | TypeDefBlockAndGDeclBlock MainBlock
    3        | MainBlock

    4 TypeDefBlockAndGDeclBlock: TypeDefBlock GDeclBlock
    5                          | GDeclBlock
    6                          | TypeDefBlock
    7                          | %empty

    8 TypeDefBlock: TYPE TypeDefList ENDTYPE

    9 TypeDefList: TypeDefList TypeDef
   10            | TypeDef

   11 TypeDef: ID '{' FieldDeclList '}'

   12 FieldDeclList: FieldDeclList FieldDecl
   13              | FieldDecl

   14 FieldDecl: Type ID ';'

   15 GDeclBlock: DECL GDeclList ENDDECL
   16           | DECL ENDDECL

   17 GDeclList: GDeclList GDecl
   18          | GDecl

   19 GDecl: Type GidList ';'

   20 GidList: GidList ',' Gid
   21        | Gid

   22 Gid: ID
   23    | ID '[' NUM ']'
   24    | ID '(' ParamList ')'
   25    | '*' ID

   26 FDefBlock: FDefBlock Fdef
   27          | Fdef

   28 $@1: %empty

   29 Fdef: INT ID '(' ParamList ')' '{' LdeclBlock $@1 Body '}'

   30 $@2: %empty

   31 Fdef: STR ID '(' ParamList ')' '{' LdeclBlock $@2 Body '}'

   32 ParamList: ParamList ',' Param
   33          | Param
   34          | %empty

   35 Param: INT '*' ID
   36      | STR '*' ID
   37      | INT ID
   38      | STR ID

   39 LdeclBlock: DECL LDecList ENDDECL
   40           | DECL ENDDECL

   41 LDecList: LDecList LDecl
   42         | LDecl

   43 LDecl: Type IdList ';'

   44 IdList: IdList ',' '*' ID
   45       | IdList ',' ID
   46       | '*' ID
   47       | ID

   48 Type: INT
   49     | STR
   50     | ID

   51 $@3: %empty

   52 MainBlock: INT MAIN '(' ')' '{' LdeclBlock $@3 Body '}'

   53 Body: PBEGIN Slist END ';'
   54     | PBEGIN END ';'

   55 Slist: Slist Stmt
   56      | Stmt

   57 Stmt: InputStmt
   58     | OutputStmt
   59     | AsgStmt
   60     | IfStmt
   61     | whileStmt
   62     | doWhileStmt
   63     | repeatStmt
   64     | breakStmt
   65     | continueStmt
   66     | returnStmt

   67 InputStmt: READ '(' ID ')' ';'
   68          | READ '(' ID '[' E ']' ')' ';'
   69          | READ '(' ID '.' ID ')' ';'

   70 OutputStmt: WRITE '(' E ')' ';'

   71 AsgStmt: ID EQUAL E ';'
   72        | ID '[' E ']' EQUAL E ';'
   73        | '*' ID EQUAL E ';'
   74        | ID '.' ID EQUAL E ';'

   75 IfStmt: IF '(' E ')' THEN Slist ELSE Slist ENDIF ';'
   76       | IF '(' E ')' THEN Slist ENDIF ';'

   77 whileStmt: WHILE '(' E ')' '{' Slist '}'

   78 doWhileStmt: DO '{' Slist '}' WHILE '(' E ')' ';'

   79 repeatStmt: REPEAT '{' Slist '}' UNTIL '(' E ')' ';'

   80 breakStmt: BREAK ';'

   81 continueStmt: CONTINUE ';'

   82 returnStmt: RETURN E ';'
   83           | RETURN ';'

   84 E: E '+' E
   85  | E '-' E
   86  | E '*' E
   87  | E '/' E
   88  | E '%' E
   89  | E LT E
   90  | E GT E
   91  | E LE E
   92  | E GE E
   93  | E EQ E
   94  | E NE E
   95  | ID '(' ')'
   96  | ID '(' ArgList ')'
   97  | NUM
   98  | STRING_LITERAL
   99  | ID
  100  | '(' E ')'
  101  | ID '[' E ']'
  102  | AND ID
  103  | '*' ID
  104  | ID '.' ID

  105 ArgList: ArgList ',' E
  106        | E


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 88
    '(' (40) 24 29 31 52 67 68 69 70 75 76 77 78 79 95 96 100
    ')' (41) 24 29 31 52 67 68 69 70 75 76 77 78 79 95 96 100
    '*' (42) 25 35 36 44 46 73 86 103
    '+' (43) 84
    ',' (44) 20 32 44 45 105
    '-' (45) 85
    '.' (46) 69 74 104
    '/' (47) 87
    ';' (59) 14 19 43 53 54 67 68 69 70 71 72 73 74 75 76 78 79 80 81 82 83
    '[' (91) 23 68 72 101
    ']' (93) 23 68 72 101
    '{' (123) 11 29 31 52 77 78 79
    '}' (125) 11 29 31 52 77 78 79
    error (256)
    PBEGIN (258) 53 54
    END (259) 53 54
    READ (260) 67 68 69
    WRITE (261) 70
    IF (262) 75 76
    ELSE (263) 75
    THEN (264) 75 76
    ENDIF (265) 75 76
    WHILE (266) 77 78
    DO (267) 78
    REPEAT (268) 79
    UNTIL (269) 79
    BREAK (270) 80
    CONTINUE (271) 81
    EQUAL (272) 71 72 73 74
    LT (273) 89
    GT (274) 90
    LE (275) 91
    GE (276) 92
    NOT (277)
    NE (278) 94
    EQ (279) 93
    AND (280) 102
    DECL (281) 15 16 39 40
    ENDDECL (282) 15 16 39 40
    INT (283) 29 35 37 48 52
    STR (284) 31 36 38 49
    MAIN (285) 52
    RETURN (286) 82 83
    TYPE (287) 8
    ENDTYPE (288) 8
    NUM <AST_node> (289) 23 97
    ID <AST_node> (290) 11 14 22 23 24 25 29 31 35 36 37 38 44 45 46 47 50 67 68 69 71 72 73 74 95 96 99 101 102 103 104
    STRING_LITERAL <AST_node> (291) 98


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    Program (52)
        on left: 1 2 3
        on right: 0
    TypeDefBlockAndGDeclBlock (53)
        on left: 4 5 6 7
        on right: 1 2
    TypeDefBlock (54)
        on left: 8
        on right: 4 6
    TypeDefList (55)
        on left: 9 10
        on right: 8 9
    TypeDef (56)
        on left: 11
        on right: 9 10
    FieldDeclList <field_node> (57)
        on left: 12 13
        on right: 11 12
    FieldDecl <field_node> (58)
        on left: 14
        on right: 12 13
    GDeclBlock (59)
        on left: 15 16
        on right: 4 5
    GDeclList (60)
        on left: 17 18
        on right: 15 17
    GDecl (61)
        on left: 19
        on right: 17 18
    GidList (62)
        on left: 20 21
        on right: 19 20
    Gid (63)
        on left: 22 23 24 25
        on right: 20 21
    FDefBlock <AST_node> (64)
        on left: 26 27
        on right: 1 26
    Fdef <AST_node> (65)
        on left: 29 31
        on right: 26 27
    $@1 (66)
        on left: 28
        on right: 29
    $@2 (67)
        on left: 30
        on right: 31
    ParamList <param_node> (68)
        on left: 32 33 34
        on right: 24 29 31 32
    Param <param_node> (69)
        on left: 35 36 37 38
        on right: 32 33
    LdeclBlock <LST_node> (70)
        on left: 39 40
        on right: 29 31 52
    LDecList <LST_node> (71)
        on left: 41 42
        on right: 39 41
    LDecl (72)
        on left: 43
        on right: 41 42
    IdList (73)
        on left: 44 45 46 47
        on right: 43 44 45
    Type (74)
        on left: 48 49 50
        on right: 14 19 43
    MainBlock (75)
        on left: 52
        on right: 1 2 3
    $@3 (76)
        on left: 51
        on right: 52
    Body <AST_node> (77)
        on left: 53 54
        on right: 29 31 52
    Slist <AST_node> (78)
        on left: 55 56
        on right: 53 55 75 76 77 78 79
    Stmt <AST_node> (79)
        on left: 57 58 59 60 61 62 63 64 65 66
        on right: 55 56
    InputStmt <AST_node> (80)
        on left: 67 68 69
        on right: 57
    OutputStmt <AST_node> (81)
        on left: 70
        on right: 58
    AsgStmt <AST_node> (82)
        on left: 71 72 73 74
        on right: 59
    IfStmt <AST_node> (83)
        on left: 75 76
        on right: 60
    whileStmt <AST_node> (84)
        on left: 77
        on right: 61
    doWhileStmt <AST_node> (85)
        on left: 78
        on right: 62
    repeatStmt <AST_node> (86)
        on left: 79
        on right: 63
    breakStmt <AST_node> (87)
        on left: 80
        on right: 64
    continueStmt <AST_node> (88)
        on left: 81
        on right: 65
    returnStmt <AST_node> (89)
        on left: 82 83
        on right: 66
    E <AST_node> (90)
        on left: 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
        on right: 68 70 71 72 73 74 75 76 77 78 79 82 84 85 86 87 88 89 90 91 92 93 94 100 101 105 106
    ArgList <AST_node> (91)
        on left: 105 106
        on right: 96 105


State 0

    0 $accept: . Program $end

    DECL  shift, and go to state 1
    INT   shift, and go to state 2
    TYPE  shift, and go to state 3

    INT       [reduce using rule 7 (TypeDefBlockAndGDeclBlock)]
    $default  reduce using rule 7 (TypeDefBlockAndGDeclBlock)

    Program                    go to state 4
    TypeDefBlockAndGDeclBlock  go to state 5
    TypeDefBlock               go to state 6
    GDeclBlock                 go to state 7
    MainBlock                  go to state 8


State 1

   15 GDeclBlock: DECL . GDeclList ENDDECL
   16           | DECL . ENDDECL

    ENDDECL  shift, and go to state 9
    INT      shift, and go to state 10
    STR      shift, and go to state 11
    ID       shift, and go to state 12

    GDeclList  go to state 13
    GDecl      go to state 14
    Type       go to state 15


State 2

   52 MainBlock: INT . MAIN '(' ')' '{' LdeclBlock $@3 Body '}'

    MAIN  shift, and go to state 16


State 3

    8 TypeDefBlock: TYPE . TypeDefList ENDTYPE

    ID  shift, and go to state 17

    TypeDefList  go to state 18
    TypeDef      go to state 19


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 20


State 5

    1 Program: TypeDefBlockAndGDeclBlock . FDefBlock MainBlock
    2        | TypeDefBlockAndGDeclBlock . MainBlock

    INT  shift, and go to state 21
    STR  shift, and go to state 22

    FDefBlock  go to state 23
    Fdef       go to state 24
    MainBlock  go to state 25


State 6

    4 TypeDefBlockAndGDeclBlock: TypeDefBlock . GDeclBlock
    6                          | TypeDefBlock .

    DECL  shift, and go to state 1

    $default  reduce using rule 6 (TypeDefBlockAndGDeclBlock)

    GDeclBlock  go to state 26


State 7

    5 TypeDefBlockAndGDeclBlock: GDeclBlock .

    $default  reduce using rule 5 (TypeDefBlockAndGDeclBlock)


State 8

    3 Program: MainBlock .

    $default  reduce using rule 3 (Program)


State 9

   16 GDeclBlock: DECL ENDDECL .

    $default  reduce using rule 16 (GDeclBlock)


State 10

   48 Type: INT .

    $default  reduce using rule 48 (Type)


State 11

   49 Type: STR .

    $default  reduce using rule 49 (Type)


State 12

   50 Type: ID .

    $default  reduce using rule 50 (Type)


State 13

   15 GDeclBlock: DECL GDeclList . ENDDECL
   17 GDeclList: GDeclList . GDecl

    ENDDECL  shift, and go to state 27
    INT      shift, and go to state 10
    STR      shift, and go to state 11
    ID       shift, and go to state 12

    GDecl  go to state 28
    Type   go to state 15


State 14

   18 GDeclList: GDecl .

    $default  reduce using rule 18 (GDeclList)


State 15

   19 GDecl: Type . GidList ';'

    ID   shift, and go to state 29
    '*'  shift, and go to state 30

    GidList  go to state 31
    Gid      go to state 32


State 16

   52 MainBlock: INT MAIN . '(' ')' '{' LdeclBlock $@3 Body '}'

    '('  shift, and go to state 33


State 17

   11 TypeDef: ID . '{' FieldDeclList '}'

    '{'  shift, and go to state 34


State 18

    8 TypeDefBlock: TYPE TypeDefList . ENDTYPE
    9 TypeDefList: TypeDefList . TypeDef

    ENDTYPE  shift, and go to state 35
    ID       shift, and go to state 17

    TypeDef  go to state 36


State 19

   10 TypeDefList: TypeDef .

    $default  reduce using rule 10 (TypeDefList)


State 20

    0 $accept: Program $end .

    $default  accept


State 21

   29 Fdef: INT . ID '(' ParamList ')' '{' LdeclBlock $@1 Body '}'
   52 MainBlock: INT . MAIN '(' ')' '{' LdeclBlock $@3 Body '}'

    MAIN  shift, and go to state 16
    ID    shift, and go to state 37


State 22

   31 Fdef: STR . ID '(' ParamList ')' '{' LdeclBlock $@2 Body '}'

    ID  shift, and go to state 38


State 23

    1 Program: TypeDefBlockAndGDeclBlock FDefBlock . MainBlock
   26 FDefBlock: FDefBlock . Fdef

    INT  shift, and go to state 21
    STR  shift, and go to state 22

    Fdef       go to state 39
    MainBlock  go to state 40


State 24

   27 FDefBlock: Fdef .

    $default  reduce using rule 27 (FDefBlock)


State 25

    2 Program: TypeDefBlockAndGDeclBlock MainBlock .

    $default  reduce using rule 2 (Program)


State 26

    4 TypeDefBlockAndGDeclBlock: TypeDefBlock GDeclBlock .

    $default  reduce using rule 4 (TypeDefBlockAndGDeclBlock)


State 27

   15 GDeclBlock: DECL GDeclList ENDDECL .

    $default  reduce using rule 15 (GDeclBlock)


State 28

   17 GDeclList: GDeclList GDecl .

    $default  reduce using rule 17 (GDeclList)


State 29

   22 Gid: ID .
   23    | ID . '[' NUM ']'
   24    | ID . '(' ParamList ')'

    '['  shift, and go to state 41
    '('  shift, and go to state 42

    $default  reduce using rule 22 (Gid)


State 30

   25 Gid: '*' . ID

    ID  shift, and go to state 43


State 31

   19 GDecl: Type GidList . ';'
   20 GidList: GidList . ',' Gid

    ';'  shift, and go to state 44
    ','  shift, and go to state 45


State 32

   21 GidList: Gid .

    $default  reduce using rule 21 (GidList)


State 33

   52 MainBlock: INT MAIN '(' . ')' '{' LdeclBlock $@3 Body '}'

    ')'  shift, and go to state 46


State 34

   11 TypeDef: ID '{' . FieldDeclList '}'

    INT  shift, and go to state 10
    STR  shift, and go to state 11
    ID   shift, and go to state 12

    FieldDeclList  go to state 47
    FieldDecl      go to state 48
    Type           go to state 49


State 35

    8 TypeDefBlock: TYPE TypeDefList ENDTYPE .

    $default  reduce using rule 8 (TypeDefBlock)


State 36

    9 TypeDefList: TypeDefList TypeDef .

    $default  reduce using rule 9 (TypeDefList)


State 37

   29 Fdef: INT ID . '(' ParamList ')' '{' LdeclBlock $@1 Body '}'

    '('  shift, and go to state 50


State 38

   31 Fdef: STR ID . '(' ParamList ')' '{' LdeclBlock $@2 Body '}'

    '('  shift, and go to state 51


State 39

   26 FDefBlock: FDefBlock Fdef .

    $default  reduce using rule 26 (FDefBlock)


State 40

    1 Program: TypeDefBlockAndGDeclBlock FDefBlock MainBlock .

    $default  reduce using rule 1 (Program)


State 41

   23 Gid: ID '[' . NUM ']'

    NUM  shift, and go to state 52


State 42

   24 Gid: ID '(' . ParamList ')'

    INT  shift, and go to state 53
    STR  shift, and go to state 54

    $default  reduce using rule 34 (ParamList)

    ParamList  go to state 55
    Param      go to state 56


State 43

   25 Gid: '*' ID .

    $default  reduce using rule 25 (Gid)


State 44

   19 GDecl: Type GidList ';' .

    $default  reduce using rule 19 (GDecl)


State 45

   20 GidList: GidList ',' . Gid

    ID   shift, and go to state 29
    '*'  shift, and go to state 30

    Gid  go to state 57


State 46

   52 MainBlock: INT MAIN '(' ')' . '{' LdeclBlock $@3 Body '}'

    '{'  shift, and go to state 58


State 47

   11 TypeDef: ID '{' FieldDeclList . '}'
   12 FieldDeclList: FieldDeclList . FieldDecl

    INT  shift, and go to state 10
    STR  shift, and go to state 11
    ID   shift, and go to state 12
    '}'  shift, and go to state 59

    FieldDecl  go to state 60
    Type       go to state 49


State 48

   13 FieldDeclList: FieldDecl .

    $default  reduce using rule 13 (FieldDeclList)


State 49

   14 FieldDecl: Type . ID ';'

    ID  shift, and go to state 61


State 50

   29 Fdef: INT ID '(' . ParamList ')' '{' LdeclBlock $@1 Body '}'

    INT  shift, and go to state 53
    STR  shift, and go to state 54

    $default  reduce using rule 34 (ParamList)

    ParamList  go to state 62
    Param      go to state 56


State 51

   31 Fdef: STR ID '(' . ParamList ')' '{' LdeclBlock $@2 Body '}'

    INT  shift, and go to state 53
    STR  shift, and go to state 54

    $default  reduce using rule 34 (ParamList)

    ParamList  go to state 63
    Param      go to state 56


State 52

   23 Gid: ID '[' NUM . ']'

    ']'  shift, and go to state 64


State 53

   35 Param: INT . '*' ID
   37      | INT . ID

    ID   shift, and go to state 65
    '*'  shift, and go to state 66


State 54

   36 Param: STR . '*' ID
   38      | STR . ID

    ID   shift, and go to state 67
    '*'  shift, and go to state 68


State 55

   24 Gid: ID '(' ParamList . ')'
   32 ParamList: ParamList . ',' Param

    ','  shift, and go to state 69
    ')'  shift, and go to state 70


State 56

   33 ParamList: Param .

    $default  reduce using rule 33 (ParamList)


State 57

   20 GidList: GidList ',' Gid .

    $default  reduce using rule 20 (GidList)


State 58

   52 MainBlock: INT MAIN '(' ')' '{' . LdeclBlock $@3 Body '}'

    DECL  shift, and go to state 71

    LdeclBlock  go to state 72


State 59

   11 TypeDef: ID '{' FieldDeclList '}' .

    $default  reduce using rule 11 (TypeDef)


State 60

   12 FieldDeclList: FieldDeclList FieldDecl .

    $default  reduce using rule 12 (FieldDeclList)


State 61

   14 FieldDecl: Type ID . ';'

    ';'  shift, and go to state 73


State 62

   29 Fdef: INT ID '(' ParamList . ')' '{' LdeclBlock $@1 Body '}'
   32 ParamList: ParamList . ',' Param

    ','  shift, and go to state 69
    ')'  shift, and go to state 74


State 63

   31 Fdef: STR ID '(' ParamList . ')' '{' LdeclBlock $@2 Body '}'
   32 ParamList: ParamList . ',' Param

    ','  shift, and go to state 69
    ')'  shift, and go to state 75


State 64

   23 Gid: ID '[' NUM ']' .

    $default  reduce using rule 23 (Gid)


State 65

   37 Param: INT ID .

    $default  reduce using rule 37 (Param)


State 66

   35 Param: INT '*' . ID

    ID  shift, and go to state 76


State 67

   38 Param: STR ID .

    $default  reduce using rule 38 (Param)


State 68

   36 Param: STR '*' . ID

    ID  shift, and go to state 77


State 69

   32 ParamList: ParamList ',' . Param

    INT  shift, and go to state 53
    STR  shift, and go to state 54

    Param  go to state 78


State 70

   24 Gid: ID '(' ParamList ')' .

    $default  reduce using rule 24 (Gid)


State 71

   39 LdeclBlock: DECL . LDecList ENDDECL
   40           | DECL . ENDDECL

    ENDDECL  shift, and go to state 79
    INT      shift, and go to state 10
    STR      shift, and go to state 11
    ID       shift, and go to state 12

    LDecList  go to state 80
    LDecl     go to state 81
    Type      go to state 82


State 72

   52 MainBlock: INT MAIN '(' ')' '{' LdeclBlock . $@3 Body '}'

    $default  reduce using rule 51 ($@3)

    $@3  go to state 83


State 73

   14 FieldDecl: Type ID ';' .

    $default  reduce using rule 14 (FieldDecl)


State 74

   29 Fdef: INT ID '(' ParamList ')' . '{' LdeclBlock $@1 Body '}'

    '{'  shift, and go to state 84


State 75

   31 Fdef: STR ID '(' ParamList ')' . '{' LdeclBlock $@2 Body '}'

    '{'  shift, and go to state 85


State 76

   35 Param: INT '*' ID .

    $default  reduce using rule 35 (Param)


State 77

   36 Param: STR '*' ID .

    $default  reduce using rule 36 (Param)


State 78

   32 ParamList: ParamList ',' Param .

    $default  reduce using rule 32 (ParamList)


State 79

   40 LdeclBlock: DECL ENDDECL .

    $default  reduce using rule 40 (LdeclBlock)


State 80

   39 LdeclBlock: DECL LDecList . ENDDECL
   41 LDecList: LDecList . LDecl

    ENDDECL  shift, and go to state 86
    INT      shift, and go to state 10
    STR      shift, and go to state 11
    ID       shift, and go to state 12

    LDecl  go to state 87
    Type   go to state 82


State 81

   42 LDecList: LDecl .

    $default  reduce using rule 42 (LDecList)


State 82

   43 LDecl: Type . IdList ';'

    ID   shift, and go to state 88
    '*'  shift, and go to state 89

    IdList  go to state 90


State 83

   52 MainBlock: INT MAIN '(' ')' '{' LdeclBlock $@3 . Body '}'

    PBEGIN  shift, and go to state 91

    Body  go to state 92


State 84

   29 Fdef: INT ID '(' ParamList ')' '{' . LdeclBlock $@1 Body '}'

    DECL  shift, and go to state 71

    LdeclBlock  go to state 93


State 85

   31 Fdef: STR ID '(' ParamList ')' '{' . LdeclBlock $@2 Body '}'

    DECL  shift, and go to state 71

    LdeclBlock  go to state 94


State 86

   39 LdeclBlock: DECL LDecList ENDDECL .

    $default  reduce using rule 39 (LdeclBlock)


State 87

   41 LDecList: LDecList LDecl .

    $default  reduce using rule 41 (LDecList)


State 88

   47 IdList: ID .

    $default  reduce using rule 47 (IdList)


State 89

   46 IdList: '*' . ID

    ID  shift, and go to state 95


State 90

   43 LDecl: Type IdList . ';'
   44 IdList: IdList . ',' '*' ID
   45       | IdList . ',' ID

    ';'  shift, and go to state 96
    ','  shift, and go to state 97


State 91

   53 Body: PBEGIN . Slist END ';'
   54     | PBEGIN . END ';'

    END       shift, and go to state 98
    READ      shift, and go to state 99
    WRITE     shift, and go to state 100
    IF        shift, and go to state 101
    WHILE     shift, and go to state 102
    DO        shift, and go to state 103
    REPEAT    shift, and go to state 104
    BREAK     shift, and go to state 105
    CONTINUE  shift, and go to state 106
    RETURN    shift, and go to state 107
    ID        shift, and go to state 108
    '*'       shift, and go to state 109

    Slist         go to state 110
    Stmt          go to state 111
    InputStmt     go to state 112
    OutputStmt    go to state 113
    AsgStmt       go to state 114
    IfStmt        go to state 115
    whileStmt     go to state 116
    doWhileStmt   go to state 117
    repeatStmt    go to state 118
    breakStmt     go to state 119
    continueStmt  go to state 120
    returnStmt    go to state 121


State 92

   52 MainBlock: INT MAIN '(' ')' '{' LdeclBlock $@3 Body . '}'

    '}'  shift, and go to state 122


State 93

   29 Fdef: INT ID '(' ParamList ')' '{' LdeclBlock . $@1 Body '}'

    $default  reduce using rule 28 ($@1)

    $@1  go to state 123


State 94

   31 Fdef: STR ID '(' ParamList ')' '{' LdeclBlock . $@2 Body '}'

    $default  reduce using rule 30 ($@2)

    $@2  go to state 124


State 95

   46 IdList: '*' ID .

    $default  reduce using rule 46 (IdList)


State 96

   43 LDecl: Type IdList ';' .

    $default  reduce using rule 43 (LDecl)


State 97

   44 IdList: IdList ',' . '*' ID
   45       | IdList ',' . ID

    ID   shift, and go to state 125
    '*'  shift, and go to state 126


State 98

   54 Body: PBEGIN END . ';'

    ';'  shift, and go to state 127


State 99

   67 InputStmt: READ . '(' ID ')' ';'
   68          | READ . '(' ID '[' E ']' ')' ';'
   69          | READ . '(' ID '.' ID ')' ';'

    '('  shift, and go to state 128


State 100

   70 OutputStmt: WRITE . '(' E ')' ';'

    '('  shift, and go to state 129


State 101

   75 IfStmt: IF . '(' E ')' THEN Slist ELSE Slist ENDIF ';'
   76       | IF . '(' E ')' THEN Slist ENDIF ';'

    '('  shift, and go to state 130


State 102

   77 whileStmt: WHILE . '(' E ')' '{' Slist '}'

    '('  shift, and go to state 131


State 103

   78 doWhileStmt: DO . '{' Slist '}' WHILE '(' E ')' ';'

    '{'  shift, and go to state 132


State 104

   79 repeatStmt: REPEAT . '{' Slist '}' UNTIL '(' E ')' ';'

    '{'  shift, and go to state 133


State 105

   80 breakStmt: BREAK . ';'

    ';'  shift, and go to state 134


State 106

   81 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 135


State 107

   82 returnStmt: RETURN . E ';'
   83           | RETURN . ';'

    AND             shift, and go to state 136
    NUM             shift, and go to state 137
    ID              shift, and go to state 138
    STRING_LITERAL  shift, and go to state 139
    '*'             shift, and go to state 140
    ';'             shift, and go to state 141
    '('             shift, and go to state 142

    E  go to state 143


State 108

   71 AsgStmt: ID . EQUAL E ';'
   72        | ID . '[' E ']' EQUAL E ';'
   74        | ID . '.' ID EQUAL E ';'

    EQUAL  shift, and go to state 144
    '['    shift, and go to state 145
    '.'    shift, and go to state 146


State 109

   73 AsgStmt: '*' . ID EQUAL E ';'

    ID  shift, and go to state 147


State 110

   53 Body: PBEGIN Slist . END ';'
   55 Slist: Slist . Stmt

    END       shift, and go to state 148
    READ      shift, and go to state 99
    WRITE     shift, and go to state 100
    IF        shift, and go to state 101
    WHILE     shift, and go to state 102
    DO        shift, and go to state 103
    REPEAT    shift, and go to state 104
    BREAK     shift, and go to state 105
    CONTINUE  shift, and go to state 106
    RETURN    shift, and go to state 107
    ID        shift, and go to state 108
    '*'       shift, and go to state 109

    Stmt          go to state 149
    InputStmt     go to state 112
    OutputStmt    go to state 113
    AsgStmt       go to state 114
    IfStmt        go to state 115
    whileStmt     go to state 116
    doWhileStmt   go to state 117
    repeatStmt    go to state 118
    breakStmt     go to state 119
    continueStmt  go to state 120
    returnStmt    go to state 121


State 111

   56 Slist: Stmt .

    $default  reduce using rule 56 (Slist)


State 112

   57 Stmt: InputStmt .

    $default  reduce using rule 57 (Stmt)


State 113

   58 Stmt: OutputStmt .

    $default  reduce using rule 58 (Stmt)


State 114

   59 Stmt: AsgStmt .

    $default  reduce using rule 59 (Stmt)


State 115

   60 Stmt: IfStmt .

    $default  reduce using rule 60 (Stmt)


State 116

   61 Stmt: whileStmt .

    $default  reduce using rule 61 (Stmt)


State 117

   62 Stmt: doWhileStmt .

    $default  reduce using rule 62 (Stmt)


State 118

   63 Stmt: repeatStmt .

    $default  reduce using rule 63 (Stmt)


State 119

   64 Stmt: breakStmt .

    $default  reduce using rule 64 (Stmt)


State 120

   65 Stmt: continueStmt .

    $default  reduce using rule 65 (Stmt)


State 121

   66 Stmt: returnStmt .

    $default  reduce using rule 66 (Stmt)


State 122

   52 MainBlock: INT MAIN '(' ')' '{' LdeclBlock $@3 Body '}' .

    $default  reduce using rule 52 (MainBlock)


State 123

   29 Fdef: INT ID '(' ParamList ')' '{' LdeclBlock $@1 . Body '}'

    PBEGIN  shift, and go to state 91

    Body  go to state 150


State 124

   31 Fdef: STR ID '(' ParamList ')' '{' LdeclBlock $@2 . Body '}'

    PBEGIN  shift, and go to state 91

    Body  go to state 151


State 125

   45 IdList: IdList ',' ID .

    $default  reduce using rule 45 (IdList)


State 126

   44 IdList: IdList ',' '*' . ID

    ID  shift, and go to state 152


State 127

   54 Body: PBEGIN END ';' .

    $default  reduce using rule 54 (Body)


State 128

   67 InputStmt: READ '(' . ID ')' ';'
   68          | READ '(' . ID '[' E ']' ')' ';'
   69          | READ '(' . ID '.' ID ')' ';'

    ID  shift, and go to state 153


State 129

   70 OutputStmt: WRITE '(' . E ')' ';'

    AND             shift, and go to state 136
    NUM             shift, and go to state 137
    ID              shift, and go to state 138
    STRING_LITERAL  shift, and go to state 139
    '*'             shift, and go to state 140
    '('             shift, and go to state 142

    E  go to state 154


State 130

   75 IfStmt: IF '(' . E ')' THEN Slist ELSE Slist ENDIF ';'
   76       | IF '(' . E ')' THEN Slist ENDIF ';'

    AND             shift, and go to state 136
    NUM             shift, and go to state 137
    ID              shift, and go to state 138
    STRING_LITERAL  shift, and go to state 139
    '*'             shift, and go to state 140
    '('             shift, and go to state 142

    E  go to state 155


State 131

   77 whileStmt: WHILE '(' . E ')' '{' Slist '}'

    AND             shift, and go to state 136
    NUM             shift, and go to state 137
    ID              shift, and go to state 138
    STRING_LITERAL  shift, and go to state 139
    '*'             shift, and go to state 140
    '('             shift, and go to state 142

    E  go to state 156


State 132

   78 doWhileStmt: DO '{' . Slist '}' WHILE '(' E ')' ';'

    READ      shift, and go to state 99
    WRITE     shift, and go to state 100
    IF        shift, and go to state 101
    WHILE     shift, and go to state 102
    DO        shift, and go to state 103
    REPEAT    shift, and go to state 104
    BREAK     shift, and go to state 105
    CONTINUE  shift, and go to state 106
    RETURN    shift, and go to state 107
    ID        shift, and go to state 108
    '*'       shift, and go to state 109

    Slist         go to state 157
    Stmt          go to state 111
    InputStmt     go to state 112
    OutputStmt    go to state 113
    AsgStmt       go to state 114
    IfStmt        go to state 115
    whileStmt     go to state 116
    doWhileStmt   go to state 117
    repeatStmt    go to state 118
    breakStmt     go to state 119
    continueStmt  go to state 120
    returnStmt    go to state 121


State 133

   79 repeatStmt: REPEAT '{' . Slist '}' UNTIL '(' E ')' ';'

    READ      shift, and go to state 99
    WRITE     shift, and go to state 100
    IF        shift, and go to state 101
    WHILE     shift, and go to state 102
    DO        shift, and go to state 103
    REPEAT    shift, and go to state 104
    BREAK     shift, and go to state 105
    CONTINUE  shift, and go to state 106
    RETURN    shift, and go to state 107
    ID        shift, and go to state 108
    '*'       shift, and go to state 109

    Slist         go to state 158
    Stmt          go to state 111
    InputStmt     go to state 112
    OutputStmt    go to state 113
    AsgStmt       go to state 114
    IfStmt        go to state 115
    whileStmt     go to state 116
    doWhileStmt   go to state 117
    repeatStmt    go to state 118
    breakStmt     go to state 119
    continueStmt  go to state 120
    returnStmt    go to state 121


State 134

   80 breakStmt: BREAK ';' .

    $default  reduce using rule 80 (breakStmt)


State 135

   81 continueStmt: CONTINUE ';' .

    $default  reduce using rule 81 (continueStmt)


State 136

  102 E: AND . ID

    ID  shift, and go to state 159


State 137

   97 E: NUM .

    $default  reduce using rule 97 (E)


State 138

   95 E: ID . '(' ')'
   96  | ID . '(' ArgList ')'
   99  | ID .
  101  | ID . '[' E ']'
  104  | ID . '.' ID

    '['  shift, and go to state 160
    '('  shift, and go to state 161
    '.'  shift, and go to state 162

    $default  reduce using rule 99 (E)


State 139

   98 E: STRING_LITERAL .

    $default  reduce using rule 98 (E)


State 140

  103 E: '*' . ID

    ID  shift, and go to state 163


State 141

   83 returnStmt: RETURN ';' .

    $default  reduce using rule 83 (returnStmt)


State 142

  100 E: '(' . E ')'

    AND             shift, and go to state 136
    NUM             shift, and go to state 137
    ID              shift, and go to state 138
    STRING_LITERAL  shift, and go to state 139
    '*'             shift, and go to state 140
    '('             shift, and go to state 142

    E  go to state 164


State 143

   82 returnStmt: RETURN E . ';'
   84 E: E . '+' E
   85  | E . '-' E
   86  | E . '*' E
   87  | E . '/' E
   88  | E . '%' E
   89  | E . LT E
   90  | E . GT E
   91  | E . LE E
   92  | E . GE E
   93  | E . EQ E
   94  | E . NE E

    LT   shift, and go to state 165
    GT   shift, and go to state 166
    LE   shift, and go to state 167
    GE   shift, and go to state 168
    NE   shift, and go to state 169
    EQ   shift, and go to state 170
    '+'  shift, and go to state 171
    '-'  shift, and go to state 172
    '*'  shift, and go to state 173
    '/'  shift, and go to state 174
    '%'  shift, and go to state 175
    ';'  shift, and go to state 176


State 144

   71 AsgStmt: ID EQUAL . E ';'
